Fix header let behind elements appears

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   color: white;
   text-align: left;
   padding: 0.25em;
+  z-index: 10;
 }
 
 .add-button {
